[project]
name = "dam-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "japanize-matplotlib>=1.1.3",
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
]
